--- a/src/app/demo-panel-side/demo-panel-side.component.scss
+++ b/src/app/demo-panel-side/demo-panel-side.component.scss
@@ -1,7 +1,1 @@
-/**
- * Fix for mat-tab not using full height.
- * See https://github.com/angular/material2/issues/4591
- */
-::ng-deep .mat-tab-body-wrapper {
-  height: 100%
-}
+
